More YouTube videos
Link to slides for Peter Millican's intro to general philosophy; The
Partially Examined Life;  Wireless Philosophy.

--- a/index.html
+++ b/index.html
@@ -102,10 +102,27 @@
         <a href="https://www.youtube.com/playlist?list=PL2FEB728FF960FBD9">General Philosophy</a>:
         an introduction taught by 
         <a href="https://en.wikipedia.org/wiki/Peter_Millican">Peter Millican</a>
-        to first-year philosophy studeents at the University of Oxford. 
+        to first-year philosophy students at the University of Oxford.
+        Links to slides, and audio and video downloads are available under a
+        <a href="http://creativecommons.org/licenses/by-nc-sa/2.0/uk/">Creative Commons licence</a>
+        at the 
+        <a href="http://podcasts.ox.ac.uk/series/general-philosophy">University
+        of Oxford's podcasts website</a>.
         <!-- @@ add description! -->
-        (33 videos, each between 5 and 23 minutes long).
+        (There are 33 videos, each between 5 and 23 minutes long. The 
+        University of Oxford also has a lot of 
+        <a href="http://podcasts.ox.ac.uk/open">other content available under 
+        Creative Commons</a>.)
       </li>
+      <!-- Oxford Open Content: The Value of Humanities: http://podcasts.ox.ac.uk/series/value-humanities (2013) -->
+      <!-- Oxford Open Content: A Romp Through the Philosophy of Mind: http://podcasts.ox.ac.uk/series/romp-through-philosophy-mind (2012) -->
+      <!-- Oxford Open Content: Philosophy for Beginners: http://podcasts.ox.ac.uk/series/philosophy-beginners (2009) -->
+      <!-- Nietzsche on Mind and Nature: http://podcasts.ox.ac.uk/series/nietzsche-mind-and-nature -->
+      <!-- Interviews with Philosophers: http://podcasts.ox.ac.uk/series/interviews-philosophers (2008) -->
+      <!-- Peter Millican: 
+            Introduction to David Hume's Treatise of Human Nature Book One: http://podcasts.ox.ac.uk/series/introduction-david-humes-treatise-human-nature-book-one 
+            Hume's Central Principles: http://podcasts.ox.ac.uk/series/humes-central-principles & https://www.youtube.com/playlist?list=PLlGKhJRyG0snD8_1q3ZnL7dQEfPN0dm9H 
+      -->
       <li>
         <a href="https://www.youtube.com/playlist?list=PL656A4EDA0320618D">Introduction to Philosophy</a>:
         an introduction by 
@@ -114,6 +131,7 @@
         covers important philosophers from the presocratics to Kant.
         (13 videos, each between 33 and 70 minutes long). 
       </li>
+      <!-- PhilosophyOwl: https://www.youtube.com/user/PhilosophyOwl/feed  -->
       <li>
         <a href="https://www.youtube.com/user/schooloflifechannel">The School of Life</a>
         is a YouTube channel started by people who are
@@ -130,6 +148,25 @@
         <a href="http://www.theschooloflife.com/london/">www.theschooloflife.com</a>
         and 
         <a href="http://www.thebookoflife.org/">www.thebookoflife.org</a>.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/user/shinobirastafari/videos">The 
+        Partially Examined Life</a> is a YouTube channel with podcasts
+        (with the same title) and other videos about philosophy.
+        The podcasts and videos typically focus either on a specific philosopher
+        or a specific topic. <br />
+        One of their playlists is 
+        <a href="https://www.youtube.com/playlist?list=PLc__061N_KkYFJIfoeQ_3qx18726HXt_z">The
+        Partially Examined Life: <abbr title="Partially Dxamined Life">PEL</abbr> guests</a>:
+        this is a playlist of videos from various YouTube channels.<br />
+        <a href="https://www.youtube.com/channel/UCdZCYe2YMU5b47xyvcF9pLw/">Partially 
+        Examined Life Citizens</a> is a related channel. The playlist
+        <a href="https://www.youtube.com/playlist?list=PLqfn4CiGnH_VjtLfjcHTwJrqaRGX-RDAC"><abbr>PEL</abbr> 
+        Episode Clips</a> contains over 60 videos.
+      </li>
+      <li>
+        https://www.youtube.com/user/WirelessPhilosophy/ Wireless Philosophy
+        http://www.wi-phi.com/
       </li>
       <li>
         Jules Evans: 
