+ exercise for intellectuals (YouTube)

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
         <cite>(Attributed to ...)</cite>
       </p>
     </blockquote-->
-    <p>This is a website about philosophy, science and
-      philosophy of science.
+    <p>This is a website about philosophy, science and philosophy of science.
+      These are fascinating topics, but please do not forget to get some
+      <a href="https://www.youtube.com/watch?v=maxiipwly0M">exercise for 
+      intellectuals (YouTube video)</a>. 
+    </p>
+    <p>
       While waiting for content about philosophy of science,
       you can watch some YouTube videos on this topic:
     </p>
