YT: definition and purpose of philosophy
"What Is Philosophy?" (M. Pigliucci); "What Is Philosophy for?" (School
of Life); "The Benefits of Philosophy and Reason" (K. A. Taylor).

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -35,6 +35,32 @@
     <p>General Philosophy</p>
     <ul>
       <li>
+        <a href="https://www.youtube.com/watch?v=OfYw9OqD8YA">What is 
+        Philosophy?</a> is a short video by 
+        <a href="https://en.wikipedia.org/wiki/Massimo_Pigliucci">Massimo Pigliucci</a>.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=mIYdx6lDDhg">What is Philosophy
+        for?</a> is a short video by The School of Life. The video explains that
+        philosophy is relevant to us because 
+        we&emdash;&ldquo;normal people&rdquo;&emdash;don't 
+        ask big questions, are vulnerable to errors of common sense,
+        are mentally confused, have muddled ideas about what makes us happy, and
+        panic and lose perspective.
+      </li>
+      <!-- The School of Life:
+        Why Arts Graduates Are Under-Employed: https://www.youtube.com/watch?v=4D0fLisyjBY
+        About arts and humanities in general, which includes philosophy.
+      -->
+      <li>
+        <a href="https://www.youtube.com/watch?v=j2xyE5ijWL4">The Benefits of 
+        Philosophy and Reason</a> is a 10-minute talk by 
+        <a href="https://en.wikipedia.org/wiki/Kenneth_Allen_Taylor">Kenneth 
+        Allen Taylor</a> at 
+        <a href="https://tedx.stanford.edu/2012">TEDx Stanford 2012</a>. 
+        <!-- Taylor: see also PhilosophyTalk: http://www.philosophytalk.org/about-us -->
+      </li>
+      <li>
         <a href="https://www.youtube.com/playlist?list=PL2FEB728FF960FBD9">General Philosophy</a>:
         an introduction taught by 
         <a href="https://en.wikipedia.org/wiki/Peter_Millican">Peter Millican</a>
@@ -152,6 +178,10 @@
         https://www.youtube.com/user/WirelessPhilosophy/ Wireless Philosophy
         http://www.wi-phi.com/
       </li-->
+      <!-- Résonance(s):
+        playlist "Philosophie (Français)" https://www.youtube.com/playlist?list=PL3eMcg42CrI77v5--D6eizUWrowvSyUTd
+          over 90 videos, most of which are between 45 and 90 minutes long
+      -->
       <!-- British Humanist Association: https://www.youtube.com/user/BritishHumanists/  -->
       <!-- Copernicus Center for Interdisciplinary Studies: https://www.youtube.com/user/CopernicusCenter/ 
         see also http://www.copernicuscenter.edu.pl/ 
@@ -208,6 +238,10 @@
       <!-- ?
         Michaël Bauwens: filosofische overlevingstechnieken voor de 21e eeuw https://www.youtube.com/watch?v=B18bg125x_Q 
       -->
+      <!-- Recherches mimétiques: https://www.youtube.com/user/Recherchesmimetiques/
+        Imitatio: https://www.youtube.com/channel/UCbJMklvu5Hi-OZtq1YaMkcQ 
+        Raven Foundation: https://www.youtube.com/user/raventelevision/ 
+      -->
       <li>
         <a href="https://www.youtube.com/playlist?list=PLU5PoQFnzyKGAcnItXg1b2D4zrGiAaj0f">In Our Time</a>
         is a 
@@ -240,7 +274,7 @@
 
     <h2>Books</h2>
     <h3>A Little History of Philosophy (2012)</h3>
-    <p>Warburton, Nigel: 
+    <p>Warburton, Nigel:
       <span class="booktitle">A Little History of Science</span>.
       New Haven &amp; London: Yale University Press, 2012 (2011). (252 pages)<br />
       This very accessible book contains 40 chapters about great thinkers in 
