Quote from Diderot added.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -24,6 +24,14 @@
   </nav>
 
   <main>
+    <blockquote id="introquote">
+      <p>
+        <q cite="https://en.wikiquote.org/wiki/Philosophy#D">The first step towards philosophy is incredulity.</q>
+        <cite><span lang="fr">Denis Diderot</span>, <span class="booktitle">Last Conversation</span>. 
+          Reported in Hoyt's <span class="booktitle">New Cyclopedia Of Practical Quotations</span> (1922), p. 596-97.
+        </cite>
+      </p>
+    </blockquote>
     <p>
       While waiting for content about philosophy,
       you can watch some YouTube videos (see below).
