+ YouTube channels, books, AllTrials
Sections: YouTube channels and Videos; Books (Angier, Goldacre,
Shermer); Registering All Medical Trials.

--- a/science/index.html
+++ b/science/index.html
@@ -19,20 +19,54 @@
       <li><a href="../index.html">Home</a></li>
       <li><a href="../philscience/index.html">Philosophy of Science</a></li>
       <li><a href="../philosophy/index.html">Philosophy</a></li>
-      <li class="active"><a href="../science/index.html">Science</a></li>
+      <li class="active"><a href="../science/index.html">Science</a>
+        <ul>
+          <li><a href="../science/ioannidis.html" 
+            title="Ioannidis on why most published research findings are false">John Ioannidis</a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </nav>
 
   <main>
-    <p>(Temporary page.)
-    <!-- 
-      While waiting for content about science,
-      you can watch some YouTube videos:
-      -->
-    </p>
+    <p>(Temporary page.)</p>
 
     <h2>YouTube Channels and Videos</h2>
     <ul>
+      <li>
+        <a href="https://www.youtube.com/user/SenseAboutScience">Sense About
+        Science</a>, the YouTube channel of the British charity
+        <a href="http://www.senseaboutscience.org/">Sense about Science</a>.
+        <!-- @@add to separate list of sites about science / scientific literacy
+          https://en.wikipedia.org/wiki/Sense_About_Science
+        -->
+      </li>
+      <li>
+        <a href="https://www.youtube.com/user/NatureVideoChannel">Nature Video</a>,
+        the YouTube channel of the British scientific journal
+        <a href="http://www.nature.com/">Nature</a>.
+        <!-- https://en.wikipedia.org/wiki/Nature_%28journal%29 -->
+      </li>
+      <li>
+        <a href="https://www.youtube.com/user/SciAmerican">Scientific American</a>,
+        the YouTube channel of the American science magazine
+        <a href="http://scientificamerican.com/">Scientific American</a>.
+        <!-- https://en.wikipedia.org/wiki/Scientific_American -->
+      </li>
+      <li>
+        <a href="https://www.youtube.com/user/spektrumverlag" lang="de">Spektrum
+        Verlag</a>, the YouTube channel of 
+        <a href="http://www.spektrum.de/" lang="de">Spektrum der Wissenschaft</a>,
+        the German edition of <i>Scientific American</i>.
+        <!-- https://de.wikipedia.org/wiki/Spektrum_der_Wissenschaft -->
+      </li>
+      <li>
+        <a href="https://www.youtube.com/user/newscientistvideo">New Scientist</a>,
+        the YouTube channel of the British science magazine
+        <a href="http://www.newscientist.com/">New Scientist</a>.
+        <!-- https://en.wikipedia.org/wiki/New_Scientist -->
+      </li>
       <li>
         <a href="https://www.youtube.com/channel/UCiAcn7mtouzR659xl6uNsOw"
         lang="nl">het denkgelag</a> is the channel of a Belgian 
@@ -42,17 +76,113 @@
         The organisation's website is available at
         <a href="http://www.denkgelag.be/">www.denkgelag.be</a>.
       </li>
+      <li>
+        Richard Feynman:
+        <a href="https://www.youtube.com/watch?v=yvfAtIJbatg">Cargo Cult Science</a>.
+        The physicist
+        <a href="https://en.wikipedia.org/wiki/Richard_Feynman">Richard Feynman</a>
+        (1918-1988) invented the term 
+        &ldquo;<a href="https://en.wikipedia.org/wiki/Cargo_cult_science">cargo 
+        cult science</a>&rdquo; for his 1974 inaugural lecture 
+        at the California Institute of Technology.
+        The text of the lecture was later included in his book
+        <a href="https://en.wikipedia.org/wiki/Surely_You%27re_Joking,_Mr._Feynman!"
+        class="booktitle">Surely You're Joking, Mr. Feynman!</a> (1985),
+        but the text is also available 
+        on the
+        <a href="http://calteches.library.caltech.edu/51/2/CargoCult.htm">Caltech's website</a>
+        and
+        <a href="http://www.lhup.edu/~DSIMANEK/cargocul.htm">elsewhere</a>.
+        (See also the
+        <a href="https://en.wikipedia.org/wiki/Oil_drop_experiment">Wikipedia
+        article about Millikan's oil drop experiment</a>.)
+      </li>
     </ul>
 
     <h2>Books</h2>
-    <p>Angier, Natalie: 
-      <a href="http://www.faber.co.uk/9780571239726-the-canon.html" 
-      class="booktitle">The Canon: The Beautiful Basics of Science</a>.
-      Faber &amp; Faber, 2008. (<abbr>ISBN</abbr> 9780571239726; 304 pages).
+    <ul>
+      <li>Angier, Natalie: 
+        <a href="http://www.faber.co.uk/9780571239726-the-canon.html" 
+        class="booktitle">The Canon: The Beautiful Basics of Science</a>.
+        Faber &amp; Faber, 2008. (<abbr>ISBN</abbr> 9780571239726; 304 pages).
+        For a list of scientists interviewed by Angier, see the
+        <a href="https://en.wikipedia.org/wiki/The_Canon">Wikipedia article
+        about the book</a>.
+      </li>
+      <li>Goldacre, Ben:
+        <a href="https://en.wikipedia.org/wiki/Bad_Science_%28book%29"
+        class="booktitle">Bad Science</a>. 
+        Fourth Estate, 2008.
+        This book criticises media reporting on health and science issues.
+        See also Goldacre's TED talk
+        <a href="https://www.youtube.com/watch?v=h4MhbkWJzKk">Battling Bad Science</a>
+        (TED talk, 2011).
+      </li>
+      <li>Shermer, Michael:
+        <a href="http://www.michaelshermer.com/science-friction/" 
+        class="booktitle">Science Friction: Where the Known Meets the Unknown</a>.
+        Times Books, 2004.
+        (See also the
+        <a href="https://en.wikipedia.org/wiki/Science_Friction:_Where_the_Known_Meets_the_Unknown">Wikipedia
+        article about <span class="booktitle">Science Friction</span></a>.)
+      </li>
+    </ul>
+
+    <h2>Registering All Medical Trials</h2>
+    <p>The British physician <a href="https://en.wikipedia.org/wiki/Ben_Goldacre">Ben
+      Goldacre</a> founded the AllTrials campaign
+      <q cite="https://en.wikipedia.org/w/index.php?title=Ben_Goldacre&oldid=681819829">to 
+      require open science practices in clinical trials</q>.
+      See <strong><a href="http://www.alltrials.net/">www.alltrials.net</a></strong>.
+      The AllTrials website explains
+      <a href="http://www.alltrials.net/find-out-more/why-this-matters/">why this
+      initiative matters</a>. The main reason is that
+      <q cite="http://www.alltrials.net/find-out-more/why-this-matters/">trials
+      with negative results are twice as likely to remain unreported as those with positive results</q>
+      so doctors and other 
+      <q>people who make decisions about medicines don’t have full information 
+      about the benefits and risks of treatments we use every day</q>.
+      For this reason, each clinical trial should be registered before it starts.
+      One of the benefits is that it should be easier to find out whether research
+      results are being withheld.
+      Anyone can <a href="http://www.alltrials.net/petition/">sign the petition</a>
+      to make a registry of all trials a reality.
     </p>
-    <!-- 
-      Ben Goldacre: Bad Science.
-    -->
+    <p>
+      See also:
+    </p>
+    <ul>
+      <li>See the Wikipedia article 
+        <a href="https://en.wikipedia.org/wiki/Clinical_trials_registry">Clinical 
+        trials registry</a>, which explains what such a registry is and points
+        out that there are no enforcement mechanisms for the publication of
+        the results of clinical trials.
+      </li>
+      <li>Ben Goldcare: 
+        <a href="https://www.youtube.com/watch?v=RKmxL8VYy0M">What doctors don't 
+        know about the drugs they prescribe</a>,
+        TED talk, 2012.
+      </li>
+      <li>Paul Glasziou: 
+        <a href="https://theconversation.com/register-all-trials-report-all-results-its-long-overdue-11603">Register 
+        all trials, report all results – it’s long overdue</a>,
+        <i>The Conversation</i>, 15 January 2013.
+        <!-- @@check links in article -->
+      </li>
+      <li>Ansis Helmanis: 
+        <a href="http://www.raps.org/focus-online/news/news-article-view/article/4097/">China 
+        to Require Registration of all Clinical Trials, Bioequivalence Studies</a>,
+        Regulatory Affairs Professionals Society (<abbr>RAPS</abbr>), 19 September 2013.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=Kto5vuiS5rA">AllTrials: 
+        Make clinical trials count</a>: a short YouTube video on the channel
+        <a href="https://www.youtube.com/user/SenseAboutScience">Sense About Science</a>.
+      </li>
+      <li>The Wikipedia article 
+        <a href="https://en.wikipedia.org/wiki/AllTrials">AllTrials</a>.
+      </li>
+    </ul>
 
   </main>
 
