--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
   <title>Home | Philosophy and Science</title>
-  <!-- 
   <link rel="stylesheet" type="text/css" media="screen" href="./css/s_124085_triad.css" title="Three-colour scheme" />
   <link rel="stylesheet" type="text/css" media="screen" href="./css/systemcolours.css" title="System colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="./css/default.css" title="No colours" />
-  -->
 </head>
-<body>
+<body id="home">
   <header>
-    <h1>Philosophy and Science</h1>
+    <h1><span class="h1txt">Philosophy and Science</span></h1>
   </header>
 
   <nav>
@@ -21,17 +19,31 @@
       <li class="active"><a href="./index.html">Home</a></li>
       <li><a href="./philscience/index.html">Philosophy of Science</a></li>
       <li><a href="./philosophy/index.html">Philosophy</a></li>
-      <li><a href="./science/index.html">Science</a></li>
+      <li><a href="./science/index.html">Science</a>
+        <ul>
+          <li><a href="../science/ioannidis.html" 
+            title="Ioannidis on why most published research findings are false">John Ioannidis</a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </nav>
 
   <main>
-    <!--blockquote id="introquote">
+    <blockquote id="introquote">
       <p>
-        <q cite="..."></q>
-        <cite>(Attributed to ...)</cite>
+        <q cite="https://en.wikiquote.org/wiki/Philosophy#N">Science rushes headlong, 
+          without selectivity, without “taste,” at whatever is knowable, in the 
+          blind desire to know all at any cost. Philosophical thinking, 
+          on the other hand, is ever on the scent of those things which are 
+          most worth knowing, the great and the important insights.
+        </q>
+        <cite><span lang="de">Friedrich Nietzsche</span>, 
+          <span class="booktitle">Philosophy in the Tragic Age of the Greeks</span>, 
+          translated by Marianne Cowan, p. 43.
+        </cite>
       </p>
-    </blockquote-->
+    </blockquote>
     <p>This is a website about philosophy, science and philosophy of science.
       These are fascinating topics, but please do not forget to get some
       <a href="https://www.youtube.com/watch?v=maxiipwly0M">exercise for 
@@ -78,7 +90,7 @@
         <a href="https://www.youtube.com/watch?v=MquP2kIvsMQ">part 5 (8 minutes)</a>.
         These videos are from a series of interviews conducted by 
         <a href="https://en.wikipedia.org/wiki/Bryan_Magee">Bryan Magee</a>
-        in the 1980s.
+        in the 1980s that were broadcast by the <abbr>BBC</abbr>.
       </li>
       <li>
         <a href="https://www.youtube.com/playlist?list=PL4O7bFNxwUHpxnd77NrkTMeJV67vd1n_p"
@@ -168,10 +180,10 @@
         <a href="https://www.youtube.com/playlist?list=PLqfn4CiGnH_VjtLfjcHTwJrqaRGX-RDAC"><abbr>PEL</abbr> 
         Episode Clips</a> contains over 60 videos.
       </li>
-      <li>
+      <!--li>
         https://www.youtube.com/user/WirelessPhilosophy/ Wireless Philosophy
         http://www.wi-phi.com/
-      </li>
+      </li-->
       <li>
         Jules Evans: 
         <a href="https://www.youtube.com/watch?v=XuwYvFlNGns">How philosophy can save your life</a>,
