Revert "New sections and rearranged content"
This reverts commit 3213371e792ca01dd7222c4e2d0077d0c25a4618.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -19,13 +19,7 @@
       <li><a href="../index.html">Home</a></li>
       <li class="active"><a href="../philscience/index.html">Philosophy of Science</a></li>
       <li><a href="../philosophy/index.html">Philosophy</a></li>
-      <li><a href="../science/index.html">Science</a>
-        <ul>
-          <li><a href="../science/ioannidis.html" 
-            title="Ioannidis on why most published research findings are false">John Ioannidis</a>
-          </li>
-        </ul>
-      </li>
+      <li><a href="../science/index.html">Science</a></li>
     </ul>
   </nav>
 
