New section; typos
New section: 'Specific Philosophers and Themes'.
Some more Yale courses.
Stephen Hawking on sciences versus philosophy.
'Why Do Philosophy?' from The Partially Examined Life.
Typo.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
 </head>
-<body>
+<body id="philosophypage">
   <header>
     <h1>Philosophy</h1>
   </header>
@@ -47,7 +47,7 @@
     </p>
 
     <h2>General Philosophy</h2>
-    <h3>Philosophy: Defintion and Benefits</h3>
+    <h3>Philosophy: Definition and Benefits</h3>
     <ul>
       <li>
         <a href="https://www.youtube.com/watch?v=OfYw9OqD8YA">What is 
@@ -77,6 +77,20 @@
         <a href="https://tedx.stanford.edu/2012">TEDx Stanford 2012</a>. 
         <!-- Taylor: see also PhilosophyTalk: http://www.philosophytalk.org/about-us -->
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=cOBkV-3Ka2Q">Why Do 
+        Philosophy?</a> is a podcast by 
+        <a href="http://www.partiallyexaminedlife.com/">The Partially Examined
+        Life</a>.
+        (The name of the website and the YouTube channel are based on the 
+        statement attributed to Socrates that 
+        <a href="https://en.wikipedia.org/wiki/The_unexamined_life_is_not_worth_living">the
+        unexamined life is not worth living</a>.)
+        <!-- See also: 
+          * Simon Longtaff: "The unexamined life is not worth living", New Philosopher, 2 June 2013: http://www.newphilosopher.com/articles/being-fully-human/ 
+          * "Socrates: An unexamined life is not worth living", 3 May 2012: http://www.the-philosophy.com/unexamined-life-worth-living-socrates 
+        -->
+      </li>
       <li>Nigel Warburton: 
         <a href="https://www.youtube.com/watch?v=7kYKF3IAwyw">Why studying 
         Philosophy is so important?</a> (42 minutes, 15 October 2015).
@@ -86,7 +100,6 @@
         <strong><q cite="https://www.youtube.com/watch?v=7kYKF3IAwyw&t=1m34s">the 
         great value of philosophy is that it transforms the people who study 
         it.</q></strong>
-
       </li>
     </ul>
 
@@ -188,7 +201,9 @@
         and Political Legitimacy and Social Structures.</q>
         The course consists of 26 videos of 40 to 50 minutes.
         <a href="http://oyc.yale.edu/philosophy/phil-181">Course materials</a>
-        can be downloaded from the Open Yale Courses website. 
+        can be downloaded from the Open Yale Courses website.
+        The course is also available on 
+        <a href="https://itunes.apple.com/us/course/philosophy-science-human-nature/id523530509">iTunes</a>.
         (Yale Open Courses are mostly available under the 
         <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><abbr 
         title="Creative Commons Attribution-NonCommercial-ShareAlike 3.0 United States">CC 
@@ -267,15 +282,6 @@
         Raven Foundation: https://www.youtube.com/user/raventelevision/ 
       -->
       <li>
-        <a href="https://www.youtube.com/playlist?list=PLU5PoQFnzyKGAcnItXg1b2D4zrGiAaj0f">In Our Time</a>
-        is a 
-        <a href="https://en.wikipedia.org/wiki/In_Our_Time_%28radio_series%29">discussion series on <abbr>BBC</abbr> Radio 4</a>. 
-        Some of the episodes are about philosophers; some of these have been
-        collected on this channel. Each episode is roughly 42 minutes long.<br />
-        An archive of past episodes is also available on the
-        <a href="http://www.bbc.co.uk/programmes/b006qykl"><abbr>BBC</abbr> Radio 4 website</a>.
-      </li>
-      <li>
         Jules Evans: 
         <a href="https://www.youtube.com/watch?v=XuwYvFlNGns">How philosophy can save your life</a>,
         a talk at TEDx Breda, 2013. 
@@ -288,8 +294,13 @@
 
     <h3>Knowledge and Progress in Philosophy</h3>
     <p>Some people claim that philosophy makes no progress or even that it is dead 
-      (<abbr>e.g.</abbr> Stephen Hawking). Below are some resources about 
-      progress and knowledge in philosophy.
+      (<abbr>e.g.</abbr>
+      <a href="https://www.youtube.com/watch?v=pdLdA8E1Oa0&t=1m1s">Stephen Hawking</a>,
+      <!-- Matt Warman: "Stephen Hawking tells Google ‘philosophy is dead’", The Telegraph, 17 May 2011: http://www.telegraph.co.uk/technology/google/8520033/Stephen-Hawking-tells-Google-philosophy-is-dead.html -->
+      which led to 
+      <a href="https://www.quora.com/How-are-philosophers-reacting-to-Stephen-Hawkings-proclamation-that-philosophy-is-dead?share=1">much</a>
+      <a href="https://www.youtube.com/watch?v=ofrP5wQFEUY">debate</a>). 
+      Below are some resources about progress and knowledge in philosophy.
     </p>
     <ul>
       <li>Richard Carrier:
@@ -473,6 +484,48 @@
       Alan Turing & John Searle;
       Peter Singer (Animal Liberation; ...).
     -->
+
+
+    <h2>Specific Philosophers and Themes</h2>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLU5PoQFnzyKGAcnItXg1b2D4zrGiAaj0f">In Our Time</a>
+        is a 
+        <a href="https://en.wikipedia.org/wiki/In_Our_Time_%28radio_series%29">discussion series on <abbr>BBC</abbr> Radio 4</a>. 
+        Some of the episodes are about philosophers; some of these have been
+        collected on this channel. Each episode is roughly 42 minutes long.<br />
+        An archive of past episodes is also available on the
+        <a href="http://www.bbc.co.uk/programmes/b006qykl"><abbr>BBC</abbr> Radio 4 website</a>.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLEA18FAF1AD9047B0">Death</a>
+        is open course taught by 
+        <a href="http://philosophy.yale.edu/people/shelly-kagan">Shelly Kagan</a> 
+        of Yale University, who also published
+        <a href="http://philosophy.yale.edu/publications/death">a book on the subject</a>.
+        The course has 26 videos that are between 35 and 50 minutes long.
+        The course is also available on 
+        <a href="https://itunes.apple.com/us/course/death/id495056431">iTunes</a>
+        (and some YouTube users made copies of the course, e.g.
+        <a href="https://www.youtube.com/playlist?list=PLAE0091CF918182D0">Philosophy 
+        of Death</a>).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PL8D95DEA9B7DFE825">Introduction
+        to Political Philosophy</a> 
+        is a open course taught by 
+        <a href="http://politicalscience.yale.edu/people/steven-smith">Steven B. 
+        Smith</a> of Yale University.
+        The course has 24 videos that are between 35 and 50 minutes long
+        (roughly 45 minutes on average per video).
+        Additional materials can be found on the
+        <a href="http://oyc.yale.edu/political-science/plsc-114">course's 
+        homepage</a>.
+        The course is also available on
+        <a href="https://itunes.apple.com/us/course/introduction-to-political/id718923554">iTunes</a>.
+      </li>
+    </ul>
+
 
     <h2>Intellectual Impostures</h2>
     <ul>
