More courses added.
GitHub's Git client causes problems: https://github.com/msysgit/msysgit/issues/194.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -282,6 +282,13 @@
         Raven Foundation: https://www.youtube.com/user/raventelevision/ 
       -->
       <li>
+        <a href="https://www.youtube.com/playlist?list=PL-0zpu2toenaUf-Z97Po8zj3VXJQ0wDiZ">Philosophy</a>
+        is a course by Phil Fernandes, who is described as a Christian thinker
+        at the Institute of Biblical Defense. 
+        The course consists of 15 videos that are between 15 and 90 minutes long.
+        <!-- channel "Theology, Philosophy and Science": https://www.youtube.com/user/godlogicscience/ -->
+      </li>
+      <li>
         Jules Evans: 
         <a href="https://www.youtube.com/watch?v=XuwYvFlNGns">How philosophy can save your life</a>,
         a talk at TEDx Breda, 2013. 
@@ -484,6 +491,25 @@
       Alan Turing & John Searle;
       Peter Singer (Animal Liberation; ...).
     -->
+    <p>YouTube playlists and videos about the history of philosophy:</p>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PL-0zpu2toena49fxDoMqtE_vfMoHPSEFs">History 
+        of Philosophy</a>
+        is a course by Arthur Holmes, who is described as a
+        &rdquo;Christian scholar and philosopher&ldquo;.
+        The course focuses on Ancient Greek philosohy.
+        It has 9 videos that are roughly between 40 and 60 minutes long.
+        <!-- channel "Theology, Philosophy and Science": https://www.youtube.com/user/godlogicscience/ -->
+        However, a longer, more complete playlist of the course, consisting of 
+        81 videos, is available on the channel of Wheaton College.
+        This version,
+        <a href="https://www.youtube.com/playlist?list=PL9GwT4_YRZdBf9nIUHs0zjrnUVl-KBNSM">A
+        History of Philosophy</a>, also covers philosophy after Antiquity
+        up to the 20th century.
+      </li>
+      <!-- Faith and Science Conference (2014): Genesis and Genetics: https://www.youtube.com/playlist?list=PL-0zpu2toenb3bETgPaYB7QrOVpVkzUIA -->
+    </ul>
 
 
     <h2>Specific Philosophers and Themes</h2>
@@ -524,6 +550,10 @@
         The course is also available on
         <a href="https://itunes.apple.com/us/course/introduction-to-political/id718923554">iTunes</a>.
       </li>
+      <!-- Several philosophy-related playlists on the channel of
+        University College Dublin (UCD): 
+        https://www.youtube.com/user/MyUCD/playlists
+      -->
     </ul>
 
 
