--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li><a href="./science/index.html">Science</a>
         <ul>
           <li><a href="../science/ioannidis.html" 
-            title="Ioannidis on why most published research findings are false">Ioannidis</a>
+            title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
         </ul>
       </li>
