h1: extra span for CSS styling

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -10,7 +10,7 @@
 </head>
 <body id="philosophypage">
   <header>
-    <h1>Philosophy</h1>
+    <h1><span class="h1txt">Philosophy</span></h1>
   </header>
 
   <nav>
