Navigation updated; body#id & h1 span for CSS

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
 </head>
-<body>
+<body id="philsciencepage">
   <header>
-    <h1>Philosophy of Science</h1>
+    <h1><span class="h1txt">Philosophy of Science</span></h1>
   </header>
 
   <nav>
@@ -19,7 +19,13 @@
       <li><a href="../index.html">Home</a></li>
       <li class="active"><a href="../philscience/index.html">Philosophy of Science</a></li>
       <li><a href="../philosophy/index.html">Philosophy</a></li>
-      <li><a href="../science/index.html">Science</a></li>
+      <li><a href="../science/index.html">Science</a>
+        <ul>
+          <li><a href="../science/ioannidis.html" 
+            title="Ioannidis on why most published research findings are false">Ioannidis</a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </nav>
 
