body#id and h1 span for CSS styling

--- a/science/index.html
+++ b/science/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
 </head>
-<body>
+<body id="sciencepage">
   <header>
-    <h1>Science</h1>
+    <h1><span class="h1txt">Science</span></h1>
   </header>
 
   <nav>
