--- a/index.html
+++ b/index.html
@@ -44,157 +44,26 @@
         </cite>
       </p>
     </blockquote>
-    <p>This website collects resources&mdash;both online and off-line&mdash;about 
-      philosophy, science and philosophy of science.
-      These are fascinating topics, but please do not forget to get some
-      <a href="https://www.youtube.com/watch?v=maxiipwly0M">exercise for 
-      intellectuals (YouTube video)</a>. 
+    <p>What is science? What distinguishes science from pseudo-science?
+      How do individual scientists advance their knowledge?
+      How does the scientific community as a whole create progress in science?
+      Why is science so important in our society?
     </p>
     <p>
-      While waiting for content about philosophy of science,
-      you can watch some YouTube videos on this topic:
+      These are questions that are explored in various disciplines,
+      especially philosophy of science, and history of science.
+      This website collects resources&mdash;both online and off-line&mdash;about 
+      the philosophy and the history of science.
+      For a better understanding of these disciplines, the website
+      also collects about philosophy in general and
+      about various sciences.
     </p>
-    <ul>
-      <li>
-        <a href="https://en.wikipedia.org/wiki/Paul_Hoyningen-Huene" 
-        lang="de">Paul Hoyningen-Huene</a> is a German philosopher who
-        has published several of his lectures on philosophy of science
-        on YouTube:
-        <ul>
-          <li><a href="https://www.youtube.com/playlist?list=PLZfv7jmzzegHYbad2_oznYXSwQB0VzjxI">Philosophy 
-            of Science</a>: a series of lectures taught in 2010 at the 
-            <a href="https://en.wikipedia.org/wiki/University_of_Hanover" lang="de">Leibniz Universität Hannover</a>
-            (mostly to students of horticulture and students of water resources
-            and environmental management; 32 videos, varying in length between 20 
-            and 90 minutes).
-          </li>
-          <li><a href="https://www.youtube.com/playlist?list=PLHwUrKo7SDpQQcNZ142H91Dby-kBkAe9V">Philosophy 
-            of Science: Inductivism, Popper, Kuhn</a> (10 videos)
-          </li>
-          <li>
-            <a href="https://www.youtube.com/playlist?list=PLHwUrKo7SDpTopKrKgq392CkbIgQQMuXN"
-            lang="de">Einführung in Erkenntnis- und Wissenschaftstheorie</a>:
-            a course in German taught at the 
-            <span lang="de">Leibniz Universität Hannover</span> in 2013-2014
-            (5 videos).
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a href="https://en.wikipedia.org/wiki/Hilary_Putnam">Hilary Putnam</a> 
-        on &ldquo;The Philosophy of Science&rdquo;:
-        <a href="https://www.youtube.com/watch?v=cG3sfrK5B4E">part 1 (10 minutes)</a>,
-        <a href="https://www.youtube.com/watch?v=rAP4E3EpedE">part 2 (11 minutes)</a>,
-        <a href="https://www.youtube.com/watch?v=PNPZDLEba44">part 3 (11 minutes)</a>,
-        <a href="https://www.youtube.com/watch?v=8KzTMStETRE">part 4 (6 minutes)</a>
-        &amp;
-        <a href="https://www.youtube.com/watch?v=MquP2kIvsMQ">part 5 (8 minutes)</a>.
-        These videos are from a series of interviews conducted by 
-        <a href="https://en.wikipedia.org/wiki/Bryan_Magee">Bryan Magee</a>
-        that were broadcast by the <abbr>BBC</abbr> in the 1980s.
-      </li>
-      <li>
-        <a href="https://www.youtube.com/playlist?list=PL4O7bFNxwUHpxnd77NrkTMeJV67vd1n_p"
-        lang="de">Wissenschaftstheorie</a>
-        is a series of lectures taught by 
-        <span lang="de">Torsten Wilholt</span> at the 
-        <span lang="de">Leibniz Universität Hannover</span>.
-        (45 videos)
-      </li>
-      <li>
-        <a href="https://www.youtube.com/playlist?list=PLgSHH6boFf5tYoX6CUjDupfKgj5QajDeW"
-        lang="fr">Philosophie des Sciences</a>, 
-        a series of lectures taught 
-        at <a href="http://www.centralesupelec.fr/" lang="fr">CentraleSupélec</a>
-        in 2012 by the French physicist
-        <a href="https://fr.wikipedia.org/wiki/%C3%89tienne_Klein">Étienne Klein</a>.
-        (9 videos, on average 15 minutes long).
-      </li>
-      <!-- see also Jack Sanders: https://www.youtube.com/channel/UC4QD-E-UrdtGyl0XIRO0EJw/videos -->
-    </ul>
+    <p>
+      These are fascinating topics, but please do not forget to get some
+      <a href="https://www.youtube.com/watch?v=maxiipwly0M">exercise for 
+      intellectuals</a>!
+    </p>
 
-    <p>General philosophy:</p>
-    <ul>
-      <li>
-        <a href="https://www.youtube.com/playlist?list=PL2FEB728FF960FBD9">General Philosophy</a>:
-        an introduction taught by 
-        <a href="https://en.wikipedia.org/wiki/Peter_Millican">Peter Millican</a>
-        to first-year philosophy students at the University of Oxford.
-        Links to slides, and audio and video downloads are available under a
-        <a href="http://creativecommons.org/licenses/by-nc-sa/2.0/uk/">Creative Commons licence</a>
-        at the 
-        <a href="http://podcasts.ox.ac.uk/series/general-philosophy">University
-        of Oxford's podcasts website</a>.
-        <!-- @@ add description! -->
-        (There are 33 videos, each between 5 and 23 minutes long. The 
-        University of Oxford also has a lot of 
-        <a href="http://podcasts.ox.ac.uk/open">other content available under 
-        Creative Commons</a>.)
-      </li>
-      <!-- Oxford Open Content: The Value of Humanities: http://podcasts.ox.ac.uk/series/value-humanities (2013) -->
-      <!-- Oxford Open Content: A Romp Through the Philosophy of Mind: http://podcasts.ox.ac.uk/series/romp-through-philosophy-mind (2012) -->
-      <!-- Oxford Open Content: Philosophy for Beginners: http://podcasts.ox.ac.uk/series/philosophy-beginners (2009) -->
-      <!-- Nietzsche on Mind and Nature: http://podcasts.ox.ac.uk/series/nietzsche-mind-and-nature -->
-      <!-- Interviews with Philosophers: http://podcasts.ox.ac.uk/series/interviews-philosophers (2008) -->
-      <!-- Peter Millican: 
-            Introduction to David Hume's Treatise of Human Nature Book One: http://podcasts.ox.ac.uk/series/introduction-david-humes-treatise-human-nature-book-one 
-            Hume's Central Principles: http://podcasts.ox.ac.uk/series/humes-central-principles & https://www.youtube.com/playlist?list=PLlGKhJRyG0snD8_1q3ZnL7dQEfPN0dm9H 
-      -->
-      <li>
-        <a href="https://www.youtube.com/playlist?list=PL656A4EDA0320618D">Introduction to Philosophy</a>:
-        an introduction by 
-        <a href="http://onemorebrown.com/">Richard Brown</a>.
-        It starts with the question what philosophy is (first video) and then 
-        covers important philosophers from the presocratics to Kant.
-        (13 videos, each between 33 and 70 minutes long). 
-      </li>
-      <!-- PhilosophyOwl: https://www.youtube.com/user/PhilosophyOwl/feed  -->
-      <li>
-        <a href="https://www.youtube.com/user/schooloflifechannel">The School of Life</a>
-        is a YouTube channel started by people who are
-        <q cite="https://www.youtube.com/user/schooloflifechannel/about">fascinated 
-        by the sort of questions we're never taught enough about at school or college: 
-        How can relationships go well? What is meaningful work? How can love last? 
-        How can one find calm? What's gone wrong (and right) with capitalism?</q>
-        The makers of this channel also say,
-        <q>We love the humanities, especially philosophy, psychotherapy, literature and art - 
-        always going to them in search of ideas that are thought-provoking, useful and consoling.</q>
-        The channel started in September 2014; the videos are typically between 
-        2 and 10 minutes long.<br />
-        The YouTube channel is only part of this initiative. See also
-        <a href="http://www.theschooloflife.com/london/">www.theschooloflife.com</a>
-        and 
-        <a href="http://www.thebookoflife.org/">www.thebookoflife.org</a>.
-      </li>
-      <li>
-        <a href="https://www.youtube.com/user/shinobirastafari/videos">The 
-        Partially Examined Life</a> is a YouTube channel with podcasts
-        (with the same title) and other videos about philosophy.
-        The podcasts and videos typically focus either on a specific philosopher
-        or a specific topic. <br />
-        One of their playlists is 
-        <a href="https://www.youtube.com/playlist?list=PLc__061N_KkYFJIfoeQ_3qx18726HXt_z">The
-        Partially Examined Life: <abbr title="Partially Dxamined Life">PEL</abbr> guests</a>:
-        this is a playlist of videos from various YouTube channels.<br />
-        <a href="https://www.youtube.com/channel/UCdZCYe2YMU5b47xyvcF9pLw/">Partially 
-        Examined Life Citizens</a> is a related channel. The playlist
-        <a href="https://www.youtube.com/playlist?list=PLqfn4CiGnH_VjtLfjcHTwJrqaRGX-RDAC"><abbr>PEL</abbr> 
-        Episode Clips</a> contains over 60 videos.
-      </li>
-      <!--li>
-        https://www.youtube.com/user/WirelessPhilosophy/ Wireless Philosophy
-        http://www.wi-phi.com/
-      </li-->
-      <li>
-        Jules Evans: 
-        <a href="https://www.youtube.com/watch?v=XuwYvFlNGns">How philosophy can save your life</a>,
-        a talk at TEDx Breda, 2013. 
-        (<a href="https://en.wikipedia.org/wiki/Cognitive_behavioral_therapy">cognitive behavioral therapy</a>
-        and 
-        <a href="https://en.wikipedia.org/wiki/Epictetus">Epictetus</a>)
-        <!-- @@duplicates item on philosophy/index.html -->
-      </li>
-    </ul>
   </main>
 
   <footer>
